Move on with k.Actors legacy adapter and VM